--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="recursos humanos, validación de información, visitas domiciliarias">
   <meta name="author" content="Estiven Pabón">
-  <title>GLOBALWORK</title>
+  <title>INSANE</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
   <!-- El link minificado de Bootstrap -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Aqui puedo customizar las fuentes -->
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+  <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'> -->
 
   <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
@@ -30,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">GLOBALWORK</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Globalwork</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -40,13 +42,7 @@
             <a class="nav-link js-scroll-trigger" id="pest" href="#soluciones">Soluciones</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" id="pest" href="#PorqueNosotros">Por qué Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" id="pest" href="#Blog">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" id="pest" href="#Contactenos">Contáctenos</a>
+            <a class="nav-link js-scroll-trigger" id="pest" href="#PorqueNosotros">Elíjanos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" id="pest" href="#linkedin"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
@@ -66,8 +62,9 @@
   <header class="masthead">
     <div class="header-content">
       <div class="header-content-inner">
+        <br><br>
         <img id="pro" src="images\logo globaltec-02.png" alt="GLOBALTEC">
-        <br><br><br>
+        <br><br><br><br>
         <h1 id="homeHeading">Optimizamos procesos de selección en menos de <strong>24 horas</strong></h1>
         <hr>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit, sed do eiusmod tempor</p> -->
@@ -81,7 +78,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12  col-sm-12 text-center">
-          <h2 class="section-heading">SOLUCIONES</h2>
+          <h2 class="section-heading">Soluciones</h2>
           <hr class="primary">
         </div>
       </div>
